Tue Jun 25 20:08:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2ulong_pack): Use rb_integer_pack.
	  (rb_big_aref): Call big2ulong with TRUE for "check" argument.
	  It should be non-effective.

Tue Jun 25 19:07:33 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (LSHIFTX): Revert r41611.
	  The redundant expression suppresses a warning, C4293, by Visual
	  Studio.
	  http://ruby-mswin.cloudapp.net/vc10-x64/ruby-trunk/log/20130625T072854Z.log.html.gz#miniruby

Tue Jun 25 19:03:00 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2ulong): Add a cast.
	  (big2ull): Add a specialized code for SIZEOF_LONG_LONG <=
	  SIZEOF_BDIGITS.

Tue Jun 25 12:42:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_single_bdigit): Use "1 + ~u" instead of
	  "-u" to suppress warning (C4146) by Visual Studio.
	  Reported by ko1 via IRC.

Tue Jun 25 12:28:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2ulong): Add code specialized for SIZEOF_LONG <=
	  SIZEOF_BDIGITS.
	  This prevents shift width warning from "num <<= BITSPERDIG".

Tue Jun 25 12:23:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix oldgen/remembered_shady counting algorithm.

	* gc.c (rgengc_check_shady): increment
	  `objspace->rgengc.remembered_shady_object_count' here.

	* gc.c (rgengc_remember): return FALSE if obj is already remembered.

	* gc.c (rgengc_rememberset_mark): make it void.

	* gc.c (gc_mark_children): fix to double counting oldgen_object_count
	  at minor GC.

Tue Jun 25 12:07:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (MSB): Removed.
	  (BDIGIT_MSB): Defined using BIGRAD_HALF.
	  (bary_2comp): Apply BIGLO after possible over flow of BDIGIT.
	  (get2comp): Ditto.
	  (bary_unpack_internal): Use BDIGIT_MSB.
	  Apply BIGLO after possible over flow of BDIGIT.
	  (rb_integer_unpack): Use BDIGIT_MSB.
	  (calc_hbase): Use BDIGMAX.
	  (big2dbl): Use BDIGMAX.
	  Apply BIGLO after possible over flow of BDIGIT.